test/langtools/tools/javac/localmethods/finder/MethodReferencesTest.out
MethodReferencesTest.java:9:25: compiler.warn.method.could.be.declared.local: main(java.lang.String[]), kindname.class, MethodReferencesTest
- compiler.err.warnings.and.werror
1 error
1 warning
